# agent-lab

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: agent-team.md  context-audit.md  explain.md  research.md  smart-do.md
.github/workflows/: ci.yml
agents/: coordinator.md  executor.md  planner.md  researcher.md  validator.md
docs/: architecture.md  quick-reference.md
experiments/01-context-engineering/: README.md
experiments/02-skill-system/: README.md
experiments/03-hooks/: HOOK_TYPES.md  README.md
experiments/04-mcp-architecture/: README.md
experiments/05-memory-engineering/: README.md  example-claude-md.md
experiments/05-memory-engineering/example-memory/: MEMORY.md  feedback_testing.md
experiments/06-runtime-orchestration/: README.md
hooks/: audit-log.sh  compaction-saver.sh  env-protection.sh  quality-gate.sh  safety-check.sh
mcp-servers/task-tracker/: pyproject.toml  server.py  test_server.py
skills/build-skill/: SKILL.md
skills/debug-agent/: SKILL.md
skills/deep-review/: SKILL.md
skills/feature-builder/: SKILL.md
skills/onboard-repo/: SKILL.md
skills/pr-analyzer/: SKILL.md
src/agent_lab/: __init__.py  cli.py
src/agent_lab/hooks/: __init__.py  generator.py
src/agent_lab/mcp/: __init__.py  server.py
src/agent_lab/orchestrator/: __init__.py  agents.py  pipeline.py  runtime.py
src/agent_lab/skills/: __init__.py  generator.py
tests/: test_generators.py  test_orchestrator.py  test_runtime.py
