[project]
name = "ai-agent-lab"
version = "0.2.0"
description = "Python toolkit for building AI agent systems with Claude Code — MCP servers, orchestration, skills, and hooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Akshay Kalapgar", email = "akkikens@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "claude",
    "mcp",
    "orchestration",
    "skills",
    "hooks",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
sdk = [
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/Akkikens/agent-lab"
Repository = "https://github.com/Akkikens/agent-lab"
Issues = "https://github.com/Akkikens/agent-lab/issues"

[project.scripts]
agent-lab = "agent_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_lab"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "twine>=6.2.0",
]
